--- a/css/common.css
+++ b/css/common.css
@@ -159,7 +159,7 @@ nav {
     overflow: hidden;
     height: 100%;
     width: 100%;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.808);
+/*     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.808); */
     border-radius: 5px;
 
 }
